some tweaks done

--- a/style.css
+++ b/style.css
@@ -347,7 +347,7 @@ nav #nav-part2{
     padding-top: 5vh;
     position: relative;
     background-color: #151515;
-    margin-bottom: 15vh;
+    margin-bottom: 20vw;
 }
 
 #video-container{
